# mesa-examples

./: .gitignore  .pre-commit-config.yaml  GALLERY.md  README.md  agent.py  app.py  model.py  policy.md  pyproject.toml  results.json  test_app.py  test_examples.py  test_gis_examples.py  test_sim.py  test_steps.py  validation_report.txt
boltzmann_wealth/: README.md  model.py
examples/: README.md  llms.txt
examples/projectile_attack/: .gitignore  README.md  agents.py  app.py  model.py  pyproject.toml  run.py
files/: README.md  detect_changes.py  discovery.py  generate_gallery.py  generate_registry.py  issue_manager.py  model.py  pr_ci.yml  run.py  run_example.py  scheduled_ci.yml
pulls/: 328_review.md
registry/: examples_aco_tsp.json  examples_bank_reserves.json  examples_boltzmann_wealth_model_network.json  examples_caching_and_replay.json  examples_charts.json  examples_color_patches.json  examples_conways_game_of_life_fast.json  examples_deffuant_weisbuch.json  examples_dining_philosophers.json  examples_el_farol_el_farol.json  examples_emperor_dilemma.json  examples_forest_fire.json  examples_hex_ant.json  examples_hex_snowflake.json  examples_hotelling_law.json  examples_humanitarian_aid_distribution.json  examples_mmc_queue.json  examples_rumor_mill.json  examples_shape_example.json  examples_termites.json  examples_virus_antibody.json  examples_warehouse.json  gis_agents_and_networks.json  gis_geo_schelling.json  gis_geo_schelling_points.json  gis_geo_sir.json  gis_population.json  gis_rainfall.json  gis_urban_growth.json  rl_boltzmann_money.json  (+2 more)
(+407 files in other folders)
